# RGE

./: .gitattributes  .gitignore  AGENTS.md  AI_DISPATCH_AUTOMATION.md  AI_DISPATCH_PARALLEL.md  AUTOMATION_IMPROVEMENTS.md  AUTONOMOUS_WATCH.md  CLAUDE.md  Cargo.toml  HANDOFF.md  Invoke-AiDispatchAuto.ps1  Invoke-AiDispatchGuard.ps1  Invoke-AiDispatchLoop.ps1  Invoke-AiDispatchQueue.ps1  Invoke-HandoffClaim.ps1  README.md  Register-AiDispatchSchedule.ps1  Status.md  Test-HandoffPacket.ps1  Wait-GitHubActions.ps1  Watch-AiDispatch.ps1  ai-review.ps1  ai-review.sh  change.md  clippy.toml  deny.toml  new-handoff.ps1  rust-toolchain.toml  rustfmt.toml  taplo.toml  versions.md
crates/anim-clip/: Cargo.toml
crates/anim-clip/src/: lib.rs
crates/anim-events/: Cargo.toml
crates/anim-events/src/: lib.rs
crates/anim-graph-editor/: Cargo.toml
crates/anim-graph-editor/src/: lib.rs
crates/anim-retarget/: Cargo.toml
crates/anim-retarget/src/: lib.rs
crates/asset-pipeline/: Cargo.toml
crates/asset-pipeline/src/: lib.rs
crates/asset-store/: Cargo.toml
crates/asset-store/src/: asset_id.rs  cache.rs  dependency.rs  layout.rs  lib.rs  local.rs
crates/asset-store/tests/: dedup_test.rs  eviction_test.rs  layout_test.rs
crates/audio/: Cargo.toml
crates/audio/src/: components.rs  falloff.rs  lib.rs  listener.rs  manager.rs  plugin_adapter.rs  schedule.rs  source.rs  test_support.rs  waveform.rs
crates/audio/tests/: distance_falloff_test.rs  mix_test.rs  playback_test.rs  plugin_adapter_smoke.rs
crates/brep-render/: Cargo.toml
crates/brep-render/src/: lib.rs
crates/build-pipeline/: Cargo.toml
crates/build-pipeline/src/: lib.rs
crates/cad-core/: Cargo.toml
crates/cad-core/src/: lib.rs
crates/cad-core/tests/: boolean_panic_recovery.rs  boolean_smoke.rs  brep_chain_resolution_smoke.rs  cad_boolean_determinism.rs  cad_graph_corruption_recovery.rs  cad_smoke.rs  extrude_face_identity_smoke.rs  extrude_fillet_smoke.rs  extrude_smoke.rs  fillet_smoke.rs  labeled_tessellation_pipeline.rs  loft_fillet_smoke.rs  loft_smoke.rs  operator_determinism_soak.rs  operator_edge_cases.rs  operator_graph_snapshot_smoke.rs  partial_revolve_smoke.rs  revolve_face_identity_smoke.rs  revolve_smoke.rs  sweep_smoke.rs  topology_lineage_smoke.rs
crates/cad-native/: Cargo.toml
crates/cad-native/src/: lib.rs
crates/cad-occt/: Cargo.toml
crates/cad-occt/src/: lib.rs
crates/cad-projection/: Cargo.toml
crates/cad-projection/src/: lib.rs  picking.rs  plugin_adapter.rs  render_adapter.rs
crates/cad-projection/tests/: brep_face_id_lookup_smoke.rs  cad_projection_smoke.rs  cross_substrate_determinism.rs  face_picking_smoke.rs  face_selection_partition_smoke.rs  face_selection_smoke.rs  fault_injection.rs  loft_brep_face_id_lookup_smoke.rs  multi_canary_integration.rs  phase_7_3_gate_closure.rs  plugin_adapter_smoke.rs  projection_error_coverage.rs  render_adapter_smoke.rs  revolve_brep_face_id_lookup_smoke.rs
crates/components-animation/: Cargo.toml
crates/components-animation/src/: animation_event_listener.rs  animation_graph_instance.rs  animation_player.rs  asset_id.rs  bone_transforms.rs  entity.rs  ik_chain.rs  lib.rs  skeleton.rs
crates/components-audio/: Cargo.toml
crates/components-audio/src/: audio_falloff.rs  audio_listener.rs  audio_source.rs  lib.rs
crates/components-editor/: Cargo.toml
crates/components-editor/src/: editor_only_root.rs  gizmo.rs  lib.rs  selection.rs
crates/components-interaction/: Cargo.toml
crates/components-interaction/src/: lib.rs  sensor.rs  trigger.rs
crates/components-lifecycle/: Cargo.toml
crates/components-lifecycle/src/: age.rs  despawn.rs  lib.rs  spawn.rs
crates/components-networking/: Cargo.toml
crates/components-networking/src/: authoritative.rs  lib.rs  network_owner.rs  peer_id.rs  remote_peer.rs  replicated.rs  replication_policy.rs
crates/components-physics/: Cargo.toml
crates/components-physics/src/: angular_velocity.rs  character_controller.rs  collider.rs  entity.rs  joint.rs  lib.rs  mass.rs  rigid_body.rs  velocity.rs
crates/editor-actions/: Cargo.toml
crates/editor-actions/src/: action.rs  bus.rs  coalesce.rs  compound.rs  lib.rs  undo_stack.rs
crates/editor-actions/tests/: audit_ledger_projection.rs  coalesce_window.rs  compound_atomic.rs  save_mark_dirty.rs  smoke_undo_byte_identical.rs  test_actions.rs
crates/editor-shell/: Cargo.toml
crates/editor-shell/src/: audit.rs  camera.rs  coord.rs  lib.rs  lifecycle.rs  pick_path.rs  play_state.rs  play_toolbar.rs  render_input.rs  render_path.rs  snapshot.rs  time_scale.rs  viewport.rs  visual_smoke.rs  visual_test_harness.rs  world.rs
crates/editor-shell/tests/: editor_frame_idle.rs  keyboard_command_bus_round_trip.rs  pie_round_trip.rs  render_input_boundary.rs  save_status_snapshot_smoke.rs  snapshot_correctness.rs  time_scale_test.rs  timing_baseline.rs
crates/editor-state/: Cargo.toml
crates/editor-state/src/: active_tool.rs  drag_drop.rs  face_selection.rs  handoff.rs  hover.rs  lib.rs  menu_state_snapshot.rs  modal_state.rs  save_status_snapshot.rs  selection.rs
crates/editor-state/tests/: coordination_not_authority.rs  round_trip_serde.rs
crates/editor-ui/: Cargo.toml
crates/editor-ui/src/: lib.rs  plugin_adapter.rs
crates/editor-ui/tests/: dock_persist.rs  dock_version_migration.rs  menus_ordering.rs  node_graph_anim_graph_smoke.rs  node_graph_material_smoke.rs  node_graph_operator_smoke.rs  node_graph_phase8_three_domain_smoke.rs  node_graph_script_graph_smoke.rs  phase8_graph_diff_smoke.rs  save_status_widget_smoke.rs  workspace_migration.rs  workspace_round_trip.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/expr-wasm/: Cargo.toml
crates/expr-wasm/benches/: compile_speed.rs  eval_speed.rs
crates/expr-wasm/src/: ast.rs  cache.rs  codegen.rs  error.rs  expr_handle.rs  lib.rs  parser.rs  stdlib.rs
crates/expr-wasm/tests/: cache_test.rs  correctness_test.rs  (+1 more)
crates/gfx/: Cargo.toml
crates/hot-reload-watcher/: Cargo.toml
crates/input/: Cargo.toml
crates/input-gestures/: Cargo.toml
(+1662 files in other folders)
