[package]
name        = "rge-anim-clip"
description = "animation clip data + sampling"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]

[lints]
workspace = true
