[package]
name        = "rge-anim-graph-editor"
description = "egui node-graph widget for animation"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]

[lints]
workspace = true
