[package]
name        = "rge-asset-store"
description = "content-addressed asset cache (BLAKE3-keyed, filesystem-backed, LRU-evictable)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]
# AssetId canonical owner (Phase 4.1). blake3 still needed for cache internals.
rge-kernel-asset = { workspace = true }
blake3     = { workspace = true, features = ["std"] }
serde      = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
tempfile   = "3"

[lints]
workspace = true
