[package]
name        = "rge-build-pipeline"
description = "multi-target cook orchestrator"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]

[lints]
workspace = true
