[package]
name        = "rge-cad-native"
description = "truck-backed CAD kernel adapter"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]

[lints]
workspace = true
