[package]
name        = "rge-cad-occt"
description = "OCCT-backed CAD kernel adapter"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]

[lints]
workspace = true
