[package]
name        = "rge-components-interaction"
description = "ECS components: Trigger, Sensor (collider markers)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]
serde = { workspace = true }

[dev-dependencies]
ron = { workspace = true }

[lints]
workspace = true
