[package]
name        = "rge-components-lifecycle"
description = "ECS components: Spawn, Despawn markers, age tracking"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]
serde = { workspace = true }

[dev-dependencies]
ron = { workspace = true }

[lints]
workspace = true
