[package]
name        = "rge-hot-reload-watcher"
description = "notify-based file watcher"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]

[lints]
workspace = true
